# clipsmith

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-config.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  README_user.txt  clipsmith.spec  config.yaml  docker-compose.observability.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  deploy.yml  e2e-cloud.yml  e2e.yml  infra-setup.yml  publish.yml  release-please.yml  toggle.yml
alembic/: env.py
alembic/versions/: 8cdb96478e40_initial_schema.py
docs/: architecture.md  cloud.md  commands.md  configuration.md  examples.md  getting-started.md  index.md
docs/api/: clipsmith.postman_collection.json  clipsmith.postman_environment.json
docs/dev/: PLAN.md  azure-cloud-setup.md  contributing.md  plan.md  sprint1.md  sprint10.md  sprint2.1.md  sprint2.md  sprint3.md  sprint4.md  sprint5.md  sprint6.md  sprint7.md  sprint8.md  sprint9.md
examples/: 01_local_mp4.ipynb  02_local_vod.ipynb  03_local_vod_ollama.ipynb  04_cloud.ipynb  05_vod_ollama_español.ipynb  clipsmith_colab.ipynb
infra/: clipsmith-runner-role.json  main.tf  outputs.tf  variables.tf  versions.tf
infra/environments/: dev.tfvars  prod.tfvars
infra/grafana/dashboards/: clipsmith.json
infra/modules/keyvault/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf
infra/modules/registry/: main.tf  outputs.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
infra/otel/: collector-config.yaml
infra/prometheus/: prometheus.yml
scripts/: build_windows.ps1  start_server.sh
src/clipsmith/: __init__.py  __main__.py  audio_signal.py  candidates.py  candidates_math.py  captions.py  chat.py  checkpoints.py  cli.py  cli_clip.py  cli_cloud.py  cli_run.py  cli_setup.py  cli_utils.py  clipper.py  detect.py  downloader.py  logging.py  pipeline.py  selector.py  settings.py  state.py  telemetry.py  transcribe.py  twitch_client.py  watcher.py
src/clipsmith/api/: __init__.py  app.py  deps.py  worker.py
src/clipsmith/candidates/: __init__.py  audio.py  builder.py  math.py
src/clipsmith/cli/: __init__.py  clip.py  cloud.py  run.py  setup.py
src/clipsmith/cloud/: azure_runner.py  drive_upload.py  provisioner.py
src/clipsmith/config/: __init__.py  loaders.py  models.py
src/clipsmith/db/: models.py  session.py
src/clipsmith/io/: __init__.py  media.py
src/clipsmith/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  prompts.py  retry.py
src/clipsmith/models/: __init__.py  candidates.py  chat.py  transcript.py  twitch.py
src/clipsmith/publish/: youtube.py
src/clipsmith/rendering/: __init__.py  captions.py  clipper.py  detect.py
src/clipsmith/selection/: __init__.py  selector.py
src/clipsmith/transcription/: __init__.py  transcriber.py
src/clipsmith/twitch/: __init__.py  chat.py  client.py  downloader.py  watcher.py
tests/: conftest.py  helpers.py  test_audio_signal.py  test_azure_runner.py  test_candidates.py  test_captions.py  test_cli.py  test_cli_cloud.py  test_clip_pick.py  test_clipper.py  test_downloader.py  test_drive_upload.py  test_llm_ollama.py  test_selector.py  test_settings.py  test_state.py  test_transcribe.py  test_twitch_client.py
tests/api/: conftest.py  test_analytics.py  test_clips.py  test_files.py  test_runs.py  test_security.py
tests/e2e/: conftest.py  test_cloud.py  test_pipeline.py
tests/integration/: conftest.py
tests/integration/candidates/: test_audio.py
tests/integration/cloud/: test_azure_runner.py  test_drive_upload.py  test_provisioner.py
tests/integration/llm/: test_ollama_provider.py
tests/integration/transcription/: test_transcriber.py
tests/integration/twitch/: test_client.py  test_downloader.py
tests/smoke/: conftest.py
tests/smoke/cli/: test_cli.py  test_cli_cloud.py
tests/smoke/config/: test_settings.py
tests/unit/: conftest.py
tests/unit/candidates/: test_audio.py  test_builder.py
tests/unit/models/: test_transcript.py
tests/unit/rendering/: test_captions.py  test_clipper.py
tests/unit/selection/: test_clip_pick.py  test_selector.py
tests/unit/transcription/: test_transcriber.py
tests/unit/twitch/: test_state.py
web/: .dockerignore  Dockerfile  README.md  cypress.config.js  cypress.config.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tsconfig.json
web/.storybook/: main.ts  preview.ts
web/app/: layout.tsx  page.tsx
web/components/: ClipCard.stories.tsx  ClipCard.tsx  ClipModal.stories.tsx  ClipModal.tsx  ClipMoreOptions.stories.tsx  ClipMoreOptions.tsx  DashboardClient.tsx  NewRunDialog.stories.tsx  NewRunDialog.tsx  ProgressStream.stories.tsx  ProgressStream.tsx  RunCard.stories.tsx  RunCard.tsx  SignalBreakdownBar.tsx
web/cypress/component/: ClipCard.cy.tsx  ClipModal.cy.tsx  ClipMoreOptions.cy.tsx  NewRunDialog.cy.tsx  ProgressStream.cy.tsx  RunCard.cy.tsx
web/cypress/e2e/: dashboard.cy.ts  run-detail.cy.ts
web/lib/: api.ts  fixtures.ts  types.ts
(+18 files in other folders)
