[project]
name = "clipsmith"
version = "0.1.0"
description = "Twitch VOD -> AI-selected vertical clips with burned-in Spanish captions."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ricardo García Ramírez", email = "rgr5882@gmail.com" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "faster-whisper>=1.0",
    "chat-downloader>=0.2",
    "twitch-dl>=3.3",
    "openai>=1.40",
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/ricardogr07/clipsmith"
Repository = "https://github.com/ricardogr07/clipsmith"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
]
vision = [
    "opencv-python-headless>=4.9",
]
ollama = [
    "ollama>=0.3",
]

[project.scripts]
clipsmith = "clipsmith.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clipsmith"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
